Hari-3/Module_5/4.ssl/nginx-ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nginx-ing
spec:
  tls:
  - hosts:
    - nginx.ingress.com
    secretName: my-web-tls

  rules:
  - host: nginx.ingress.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-nginx
            port:
              number: 80
